// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`algolia algoliaCommand() should clear index and index posts on Algolia (Hexo config) 1`] = `
[
  [
    [
      {
        "contentStripTruncate": "This is the content of the post 1
",
        "excerptStrip": "",
        "objectID": 0,
        "permalink": "http://localhost:4000/2019/01/01/first-post/",
        "photos": [],
        "slug": "first-post",
        "tags": [],
        "title": "Post 1",
      },
      {
        "contentStripTruncate": "This is the content of the post 2
",
        "excerptStrip": "",
        "objectID": 1,
        "permalink": "http://localhost:4000/2019/02/01/second-post/",
        "photos": [],
        "slug": "second-post",
        "tags": [],
        "title": "Post 2",
      },
    ],
  ],
]
`;

exports[`algolia algoliaCommand() should clear index and index posts on Algolia (environment variables) 1`] = `
[
  {
    "contentStripTruncate": "This is the content of the post 1
",
    "excerptStrip": "",
    "objectID": 0,
    "permalink": "http://localhost:4000/2019/01/01/first-post/",
    "photos": [],
    "slug": "first-post",
    "tags": [],
    "title": "Post 1",
  },
  {
    "contentStripTruncate": "This is the content of the post 2
",
    "excerptStrip": "",
    "objectID": 1,
    "permalink": "http://localhost:4000/2019/02/01/second-post/",
    "photos": [],
    "slug": "second-post",
    "tags": [],
    "title": "Post 2",
  },
]
`;

exports[`algolia algoliaCommand() should not clear index and index posts on Algolia 1`] = `
[
  [
    [
      {
        "contentStripTruncate": "This is the content of the post 1
",
        "excerptStrip": "",
        "objectID": 0,
        "permalink": "http://localhost:4000/2019/01/01/first-post/",
        "photos": [],
        "slug": "first-post",
        "tags": [],
        "title": "Post 1",
      },
      {
        "contentStripTruncate": "This is the content of the post 2
",
        "excerptStrip": "",
        "objectID": 1,
        "permalink": "http://localhost:4000/2019/02/01/second-post/",
        "photos": [],
        "slug": "second-post",
        "tags": [],
        "title": "Post 2",
      },
    ],
  ],
]
`;

exports[`algolia algoliaCommand() should use the specified chunk size to index post 1`] = `
[
  [
    [
      {
        "contentStripTruncate": "This is the content of the post 1
",
        "excerptStrip": "",
        "objectID": 0,
        "permalink": "http://localhost:4000/2019/01/01/first-post/",
        "photos": [],
        "slug": "first-post",
        "tags": [],
        "title": "Post 1",
      },
    ],
  ],
  [
    [
      {
        "contentStripTruncate": "This is the content of the post 2
",
        "excerptStrip": "",
        "objectID": 1,
        "permalink": "http://localhost:4000/2019/02/01/second-post/",
        "photos": [],
        "slug": "second-post",
        "tags": [],
        "title": "Post 2",
      },
    ],
  ],
]
`;

exports[`algolia preparePosts() should return a list of posts with only their title 1`] = `
[
  {
    "content": "<span>the content of the <strong>post</strong></span>",
    "objectID": 1,
    "title": "the title of the post",
  },
  {
    "content": "<span>the content of the <strong>post</strong></span>",
    "objectID": 2,
    "title": "the title of the post",
  },
  {
    "content": "<span>the content of the <strong>post</strong></span>",
    "objectID": 3,
    "title": "the title of the post",
  },
]
`;

exports[`algolia preparePosts() should return a list of posts with the specified fields wand warn about unknown field 1`] = `
[
  {
    "objectID": 1,
    "title": "the title of the post",
  },
]
`;

exports[`algolia preparePosts() should return a list of posts with the specified fields with filters 1`] = `
[
  {
    "contentStripTruncate": "the c",
    "objectID": 1,
    "title": "the title of the post",
    "titleTruncate": "itle of th",
  },
  {
    "contentStripTruncate": "the c",
    "objectID": 2,
    "title": "the title of the post",
    "titleTruncate": "itle of th",
  },
  {
    "contentStripTruncate": "the c",
    "objectID": 3,
    "title": "the title of the post",
    "titleTruncate": "itle of th",
  },
]
`;

exports[`algolia preparePosts() should return a list of posts with the specified fields with filters 2`] = `
[
  {
    "categories": [
      "category-1",
      "category-2",
      "category-3",
    ],
    "contentStripTruncate": "the c",
    "objectID": 1,
    "tags": [
      "tag-1",
      "tag-2",
      "tag-3",
    ],
    "title": "the title of the post",
    "titleTruncate": "itle of th",
  },
  {
    "categories": [
      "category-1",
      "category-2",
      "category-3",
    ],
    "contentStripTruncate": "the c",
    "objectID": 2,
    "tags": [
      "tag-1",
      "tag-2",
      "tag-3",
    ],
    "title": "the title of the post",
    "titleTruncate": "itle of th",
  },
  {
    "categories": [
      "category-1",
      "category-2",
      "category-3",
    ],
    "contentStripTruncate": "the c",
    "objectID": 3,
    "tags": [
      "tag-1",
      "tag-2",
      "tag-3",
    ],
    "title": "the title of the post",
    "titleTruncate": "itle of th",
  },
]
`;

exports[`algolia preparePosts() should return a list of posts with the specified fields with filters 3`] = `
[
  {
    "categories": [
      "category-1",
      "category-2",
      "category-3",
    ],
    "contentStripTruncate": "the c",
    "objectID": 1,
    "tags": [
      "tag-1",
      "tag-2",
      "tag-3",
    ],
    "title": "the title of the post",
    "titleTruncate": "itle of th",
  },
  {
    "categories": [
      "category-1",
      "category-2",
      "category-3",
    ],
    "contentStripTruncate": "the c",
    "objectID": 2,
    "tags": [
      "tag-1",
      "tag-2",
      "tag-3",
    ],
    "title": "the title of the post",
    "titleTruncate": "itle of th",
  },
  {
    "categories": [
      "category-1",
      "category-2",
      "category-3",
    ],
    "contentStripTruncate": "the c",
    "objectID": 3,
    "tags": [
      "tag-1",
      "tag-2",
      "tag-3",
    ],
    "title": "the title of the post",
    "titleTruncate": "itle of th",
  },
]
`;
